--- a/scss/main.scss
+++ b/scss/main.scss
@@ -814,3 +814,166 @@ body {
         }
     }
 }
+
+// Additional page
+.mint-page {
+    position: relative;
+    padding: 50px 0 100px 0;
+    .big-title {
+        margin-bottom: 20px;
+        span {
+            display: inline-block;
+        }
+    }
+    p.subtitle {
+        margin-bottom: 30px;
+        max-width: 750px;
+        width: 100%;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 26px;
+        text-transform: capitalize;
+        color: $main-black;
+        opacity: 0.6;
+    }
+    &__adv {
+        margin-top: 30px;
+        ul {
+            display: flex;
+            li {
+                display: flex;
+                align-items: center;
+                margin-right: 30px;
+                color: $main-black;
+                font-style: normal;
+                font-weight: 700;
+                font-size: 18px;
+                line-height: 21px;
+                text-transform: capitalize;
+                &:last-child {
+                    margin-right: 0;
+                }
+                i.icon {
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    width: 50px;
+                    height: 50px;
+                    margin-right: 15px;
+                    background: #FFFFFF;
+                    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+                    border-radius: 50px;
+                }
+            }
+        }
+    }
+    &__info {
+        margin-top: 60px;
+    }
+    &__preview {
+        height: 100%;
+        padding: 15px;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 5px;
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+            border-radius: 5px;
+        }
+    }
+    &__desc {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 100%;
+        padding-left: 80px;
+        h4 {
+            font-family: $second-f;
+            margin-bottom: 15px;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 24px;
+            line-height: 33px;
+            text-transform: uppercase;
+            color: $main-black;
+        }
+        .count {
+            margin-bottom: 30px;
+            padding-bottom: 30px;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 21.3725px;
+            line-height: 39px;
+            text-transform: capitalize;
+            color: $main-black;
+            opacity: 0.6;
+            border-bottom: 1px solid $light-gray;
+        }
+        .strong {
+            margin-bottom: 15px;
+            font-style: normal;
+            font-weight: 700;
+            font-size: 18px;
+            line-height: 33px;
+            text-transform: capitalize;
+            color: #1C1919;
+        }
+        p {
+            margin: 0;
+            font-style: normal;
+            font-weight: 400;
+            font-size: 18px;
+            line-height: 26px;
+            text-transform: capitalize;
+            color: #1C1919;
+            opacity: 0.6;
+        }
+        .counter {
+            display: flex;
+            align-items: center;
+            margin: 30px 0;
+            padding: 30px 0;
+            border-top: 1px solid $light-gray;
+            border-bottom: 1px solid $light-gray;
+            .input-number-decrement,
+            .input-number-increment {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                width: 50px;
+                height: 50px;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 24px;
+                border: 1px solid $light-gray;
+                border-radius: 5px;
+                transition: all .3s ease-out;
+                &:hover {
+                    color: #fff;
+                    background-color: $blue-g-first;
+                    border: 1px solid $blue-g-first;
+                    cursor: pointer;
+                }
+            }
+            .input-number {
+                width: 80px;
+                height: 50px;
+                margin: 0 15px;
+                font-style: normal;
+                font-weight: 600;
+                font-size: 24px;
+                border: 1px solid $light-gray;
+                border-radius: 5px;
+                text-align: center;
+            }
+        }
+        .mint-btn {
+            width: fit-content;
+            margin-bottom: 30px;
+            text-transform: capitalize;
+        }
+    }
+}
