--- a/scss/main.css
+++ b/scss/main.css
@@ -118,10 +118,17 @@ body {
   border-bottom: 1px solid #D9D9D9;
 }
 .header-bottom {
+  padding: 20px 0;
+  transition: padding 0.3s ease-in;
+}
+.header-bottom .container {
+  padding-left: 0;
+  padding-right: 0;
+}
+.header-bottom__row {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px 0;
 }
 .header-bottom__nav ul {
   display: flex;
@@ -156,6 +163,20 @@ body {
 }
 .header-bottom__nav ul li a:hover::after {
   width: 100%;
+}
+.header-bottom.fixed {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  padding: 15px 0;
+  background-color: #fff;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+  z-index: 5;
+}
+.header-bottom.fixed .container {
+  padding-left: 12px;
+  padding-right: 12px;
 }
 
 .intro {
@@ -496,9 +517,9 @@ body {
   -webkit-text-fill-color: #fff;
 }
 .collection-content .big-title span, .collection-content .contact-heading .section-title span, .contact-heading .collection-content .section-title span, .collection-content .about .section-title span, .about .collection-content .section-title span {
-  color: #95BE70;
+  color: #DA2582;
   background: none;
-  -webkit-text-fill-color: #95BE70;
+  -webkit-text-fill-color: #DA2582;
 }
 .collection-content p {
   margin-bottom: 30px;
@@ -607,8 +628,8 @@ body {
 .contact-heading .section-title span {
   display: inline-block;
   background: none;
-  -webkit-text-fill-color: #95BE70;
-  color: #95BE70;
+  -webkit-text-fill-color: #DA2582;
+  color: #DA2582;
 }
 .contact-heading p {
   margin-bottom: 15px;
@@ -648,7 +669,7 @@ body {
   transition: all 0.3s ease-out;
 }
 .contact-heading__social ul li a:hover {
-  color: #95BE70;
+  color: #DA2582;
 }
 .contact-heading__social ul li:last-child::after {
   display: none;
