--- a/scss/main.scss
+++ b/scss/main.scss
@@ -12,7 +12,7 @@ $light-gray: #D9D9D9;
 $main-black: #231F1F;
 $blue-g-first: #693ABB;
 $blue-g-second: #9970BE;
-$light-green: #95BE70;
+$light-green: #DA2582;
 
 body {
     font-family: $main-f;
@@ -137,10 +137,17 @@ body {
         border-bottom: 1px solid $light-gray;
     }
     &-bottom {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        padding: 15px 0;
+        padding: 20px 0;
+        transition: padding 0.3s ease-in;
+        .container {
+            padding-left: 0;
+            padding-right: 0;
+        }
+        &__row {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
         &__nav {
             ul {
                 display: flex;
@@ -175,6 +182,20 @@ body {
                         }
                     }
                 }
+            }
+        }
+        &.fixed {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            padding: 15px 0;
+            background-color: #fff;
+            box-shadow: 0px 0px 10px rgba(0,0,0,0.1);
+            z-index: 5;
+            .container {
+                padding-left: 12px;
+                padding-right: 12px;
             }
         }
     }
